La till Standardord
La till lite standardord för översättning

--- a/Svenska/localisation/nudge_l_english.yml
+++ b/Svenska/localisation/nudge_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
- NUDGE_0: "City"
- NUDGE_1: "Unit"
+ NUDGE_0: "Stad"
+ NUDGE_1: "Enhet"
  NUDGE_2: "Text"
- NUDGE_3: "Port"
- NUDGE_4: "Trade route"
+ NUDGE_3: "Hamn"
+ NUDGE_4: "Handelsväg"
  NUDGE_5: "Unit Combat"
