--- a/Svenska/localisation/text_l_english_0_815.yml
+++ b/Svenska/localisation/text_l_english_0_815.yml
@@ -1,11 +1,11 @@
 ﻿l_english:
- CONVREL_STAB_NO_NEGATIVE: "You need at least §G0§! stability to convert your religion."
- PAPAL_OPINION_OF_US: "Papal State opinion of us"
+ CONVREL_STAB_NO_NEGATIVE: "Du behöver åtminstånde §G0§! stabilitet för att konvertera religon."
+ PAPAL_OPINION_OF_US: "Kyrkostatens uppfattning av oss"
  LOSE_CLAIMS_ON: "§Y$WHO$§! will lose claims on §R$PROVS$§!."
  RELEASE_VASSAL_ALL_PROVS_REQ: "§RAll provinces must be unoccupied.§!"
  LEAVECOALITION_VASSAL_REASON: "Right now, it's up to $OVERLORD$ to leave this coalition."
  EMBARGOED_BY_DETAILS: "Embargoed by §Y$OTHER$§W: §R$EFF$§W%"
- MESSAGE_BUTTON_SEARCH: "Search"
+ MESSAGE_BUTTON_SEARCH: "Sök"
  MESSAGE_BUTTON_CLEAR: "Clear"
  MESSAGE_SEARCH_TOOLTIP: "Enter key words separated by §Yspace§! to filter the list."
  TRADEPATROL_REPAIRING: "§RThis unit is now repairing. It will continue the mission soon.§!"
